@@ -1,5 +1,9 @@
 2014-08-31  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
+	* eword-encode.el (eword-encode-char-type): Defined as macro.
+
+2014-08-31  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
 	* lunit.el (lunit-generate-template): Use `with-current-buffer'
 	rather than save-excursion+set-buffer.
 
